force-app/main/default/objects/Professional_Development__c/Professional_Development__c.object-meta.xml
<CustomObject>
    <description>Created By: DA
Business Unit: BW, HR
Purpose: To Track Professional Development (Training, Events, Salary History, Title Changes, etc.) for Internal Bitwise Employees</description>
    <label>Professional Development</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Professional Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Development</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>