force-app/main/default/objects/Professional_Development__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created By: DA
Business Unit: BW, HR
Purpose: To track the details of the Professional Development record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>