force-app/main/default/objects/Professional_Development__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Created By: DA
Business Unit: BW, HR
Purpose: To track the employee associated with this Professional Development record.</description>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Professional Development</relationshipLabel>
    <relationshipName>Professional_Development</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>