force-app/main/default/objects/Professional_Development__c/fields/Event_Cost__c.field-meta.xml
<CustomField>
    <fullName>Event_Cost__c</fullName>
    <description>Created By: DA
Business Unit: BW, HR
Purpose: To Track Professional Development (Training, Events, Salary History, Title Changes, etc.) for Internal Bitwise Employees</description>
    <label>Event Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>