force-app/main/default/objects/Professional_Development__c/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>