force-app/main/default/objects/Professional_Development__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Created By: DA
Business Unit: BW, HR
Purpose: To Track Professional Development (Training, Events, Salary History, Title Changes, etc.) for Internal Bitwise Employees</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>