force-app/main/default/objects/Professional_Development__c/fields/New_Salary__c.field-meta.xml
<CustomField>
    <fullName>New_Salary__c</fullName>
    <label>New Salary</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>