force-app/main/default/objects/Professional_Development__c/fields/Old_Salary__c.field-meta.xml
<CustomField>
    <fullName>Old_Salary__c</fullName>
    <label>Old Salary</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>