force-app/main/default/objects/Professional_Development__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created By: DA
Business Unit: BW/HR
Purpose: To Track categorization of Professional Development</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Salary/Title Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>