force-app/main/default/objects/Professional_Development__c/recordTypes/Internal_Use.recordType-meta.xml
<RecordType>
    <fullName>Internal_Use</fullName>
    <active>true</active>
    <label>Internal Use</label>
</RecordType>