force-app/main/default/objects/Professional_Development__c/recordTypes/Training_Events.recordType-meta.xml
<RecordType>
    <fullName>Training_Events</fullName>
    <active>true</active>
    <label>Training/Events</label>
</RecordType>